; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-stmp3xxx/extr_dma.c_stmp3xxx_dma_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-stmp3xxx/extr_dma.c_stmp3xxx_dma_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BM_APBH_CTRL0_CLKGATE = common dso_local global i32 0, align 4
@BM_APBH_CTRL0_SFTRST = common dso_local global i32 0, align 4
@REGS_APBH_BASE = common dso_local global i64 0, align 8
@HW_APBH_CTRL0 = common dso_local global i64 0, align 8
@BM_APBX_CTRL0_CLKGATE = common dso_local global i32 0, align 4
@BM_APBX_CTRL0_SFTRST = common dso_local global i32 0, align 4
@REGS_APBX_BASE = common dso_local global i64 0, align 8
@HW_APBX_CTRL0 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stmp3xxx_dma_resume() #0 {
  %1 = load i32, i32* @BM_APBH_CTRL0_CLKGATE, align 4
  %2 = load i32, i32* @BM_APBH_CTRL0_SFTRST, align 4
  %3 = or i32 %1, %2
  %4 = load i64, i64* @REGS_APBH_BASE, align 8
  %5 = load i64, i64* @HW_APBH_CTRL0, align 8
  %6 = add nsw i64 %4, %5
  %7 = call i32 @stmp3xxx_clearl(i32 %3, i64 %6)
  %8 = load i32, i32* @BM_APBX_CTRL0_CLKGATE, align 4
  %9 = load i32, i32* @BM_APBX_CTRL0_SFTRST, align 4
  %10 = or i32 %8, %9
  %11 = load i64, i64* @REGS_APBX_BASE, align 8
  %12 = load i64, i64* @HW_APBX_CTRL0, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @stmp3xxx_clearl(i32 %10, i64 %13)
  ret void
}

declare dso_local i32 @stmp3xxx_clearl(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
